<resources>
    <string name="app_name">SiverOD_PR-31_04</string>
    <string name="registration">Регистрация</string>
    <string name="input">Введите ваш логин и пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="button1">ВОЙТИ</string>
    <string name="back">на главное меню</string>
    <string name="credit_calculator">Кредитный калькулятор</string>
    <string name="sum">Сумма кредита</string>
    <string name="term">срок кредита</string>
    <string name="payment1">ежемесячный</string>
    <string name="payment2">платёж</string>
    <string name="enter">введите срок кредита</string>
    <string name="calculation">РАССЧИТАТЬ</string>
    <string name="payment">ежемесячный платёж</string>
</resources>