<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"/>
    <Button
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-15dp"/>
    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_calculator"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.slider.Slider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:valueFrom="30000"
            android:valueTo="100000"
            android:stepSize="1000"
            android:value="30000"
            />
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sum">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:text="@string/calculation"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:background="@drawable/sum2"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="185dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>